修复 声音播放